<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="about">About</string>
	<string name="appName">Chess Walk</string>
	<string name="black">Black</string>
	<string name="btChat">Send</string>
	<string name="cancel">Cancel </string>
	<string name="compVsCompToast">At least one of the players has to be human
	</string>
	<string name="btNewGame">New game</string>
	<string name="btNewGamePlay">Play</string>
	<string name="btUndo">Undo</string>
	<string name="btFlip">Flip</string>
	<string name="btShowChat">Chat</string>
	<string name="color">Color</string>
	<string name="computer">Computer</string>
	<string name="computerStrength">Computer strength: {0}s per move</string>
	<string name="tvCreateAccount">Create account</string>
	<string name="createGameOffer">Play</string>
	<string name="gameOffers">Game offers</string>
	<string name="btGuestLogin">Log in as guest</string>
	<string name="btLogIn">Log in</string>
	<string name="loginTitle">Log in to freechess.org</string>
	<string name="loggingIn">Logging in</string>
	<string name="loggingIn1">Contacting freechess.org</string>
	<string name="loggingIn2">Connected</string>
	<string name="loggingIn3">Sending username</string>
	<string name="loggingIn4">Sending password</string>
	<string name="loggingIn5">Done</string>
	<string name="edPassword">Password</string>
	<string name="human">Human</string>
	<string name="me">Me</string>
	<string name="newGameBlack">Black</string>
	<string name="newGameWhite">White</string>
	<string name="newGameTitle">New game</string>
	<string name="play_offline">Play Offline</string>
	<string name="play_online">Play Online</string>
	<string name="rated">Rated</string>
	<string name="gameOfferRated">Rated</string>
	<string name="secPerMove">sec bonus every move</string>
	<string name="seekUnavailable">This player is no longer available</string>
	<string name="settings">Settings</string>
	<string name="timeSettings">Time settings</string>
	<string name="gameEnded">Game ended</string>
	<string name="gameOfferUnrated">Unrated</string>
	<string name="waitingFor">Waiting for</string>
	<string name="waitingForOpponent">Waiting for your opponent</string>
	<string name="white">White</string>
	<string name="edUsername">Username</string>
	<string name="loginWrong">Password or username is incorrect</string>
	<string name="loginIoError">Some error happened while connecting to
		freechess.org</string>
	<string name="chessclientError">Some error while talking to freechess.org. Try to
		go back to home screen and choose Play online again</string>
	<string name="btColorWhite">White</string>
	<string name="btColorBlack">Black</string>
	<string name="btColorAuto">Auto</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="customTime">Custom...</string>
	<string name="min">min</string>
	<string name="minutes">minutes</string>
	<string name="seconds">seconds</string>
	<string name="btTimeSettingsDone">Done</string>
	<string name="timeBonusPerMove">Time bonus per move:</string>
	<string name="time">Time:</string>
	<string name="ratings">Your ratings</string>
	<string name="ratingBlitz">Blitz:</string>
	<string name="ratingLightning">Lightning:</string>
	<string name="ratingStandard">Standard:</string>
	<string name="gameOfferSPerMove">s)</string>
	<string name="tvGameOffersEmpty">No game offers, please wait</string>
	<string name="conectionLost">Connection with freechess.org lost</string>
	<string name="ok">Ok</string>
	<string name="btOfferDraw">Draw</string>
	<string name="btResign">Resign</string>
	<string name="yourMove">Your move</string>
	<string name="matchEndIResigned">You resigned.</string>
	<string name="matchEndHeResigned">{0} resignes. You win.</string>
	<string name="matchEndStalemate">Game drawn by stalemate.</string>
	<string name="matchEnd50">Game drawn by 50 move rule.</string>
	<string name="matchEndAgreement">Game drawn by agreement.</string>
	<string name="matchEndICheckmated">Checkmate! You win!</string>
	<string name="matchEndHeCheckmated">Checkmate! {0} wins.</string>
	<string name="matchEndIDisconnected">You lose by disconnection.</string>
	<string name="matchEndHeDisconnected">You win. {0} loses by disconnection.</string>
	<string name="matchEndRepetition">Game drawn by 3 fold repetition.</string>
	<string name="matchEndIOutOfTime">{0} wins. You ran out of time.</string>
	<string name="matchEndHeOutOfTime">You win. {0} ran out of time.</string>
	<string name="youOfferedDraw">You offered a draw.</string>
	<string name="acceptsDraw">{0} accpets draw.</string>
	<string name="delinesDraw">{0} declines draw.</string>
	<string name="doYouWantToResign">Do you want to resign?</string>
<string name="resumeGame">Resume game</string>
<string name="resuming">Attempting to resume a game</string>
<string name="resumeUnavailable">All your opponents are offline or unavailable</string>
<string name="tooManyAdjourned">Too many adjourned games. Resume one first.</string>
</resources>
