<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dp">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginBottom="10dp"
		android:background="@drawable/logo" />

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:padding="10dp" android:background="@drawable/box2">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:paddingLeft="3dp"
			android:paddingTop="7dp" android:textSize="16dp" android:textStyle="bold"
			android:textColor="#323232" android:text="@string/newGameTitle" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="1dp" android:layout_marginBottom="15dp"
			android:layout_marginTop="15dp" android:background="#cccccc" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingBottom="2dp"
			android:paddingLeft="3dp" android:textStyle="bold" android:text="@string/newGameWhite" />

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<Button android:id="@+id/btWhiteHuman" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:background="@drawable/btn_left_toggled" android:text="@string/human" />

			<Button android:id="@+id/btWhiteComputer" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:background="@drawable/btn_right" android:text="@string/computer" />

		</LinearLayout>

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingBottom="2dp"
			android:paddingLeft="3dp" android:paddingTop="15dp"
			android:textStyle="bold" android:text="@string/newGameBlack" />

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<Button android:id="@+id/btBlackHuman" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:background="@drawable/btn_left_toggled" android:text="@string/human" />

			<Button android:id="@+id/btBlackComputer"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:background="@drawable/btn_right"
				android:text="@string/computer" />

		</LinearLayout>

		<TextView android:id="@+id/tvDifficulty"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingBottom="7dp" android:paddingLeft="3dp"
			android:paddingTop="15dp" android:textStyle="bold" android:text="Max thinking time" />

		<SeekBar android:id="@+id/skDifficulty" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="6dp"
			android:layout_marginRight="6dp" android:max="9" android:progress="0" />

		<Button android:id="@+id/btNewGamePlay" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="5dp"
			android:layout_marginTop="15dp" android:layout_gravity="center"
			android:paddingLeft="30dp" android:paddingRight="30dp"
			android:textStyle="bold" android:text="@string/btNewGamePlay" />

	</LinearLayout>

</LinearLayout>
